welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: not found: value message
  } else if (message=="R"){
             ^BDRBuggle:8: error: not found: value message
  } else if (message=="L"){
             ^BDRBuggle:11: error: not found: value message
  } else if (message=="I"){
             ^BDRBuggle:15: error: not found: value message
  } else if (message=="A"){
             ^BDRBuggle:17: error: not found: value message
  } else if (message=="B"){
             ^BDRBuggle:20: error: not found: value message
  } else if (message=="C"){
             ^BDRBuggle:24: error: not found: value message
  } else if (message=="Z"){
             ^BDRBuggle:26: error: not found: value message
  } else if (message=="Y"){
             ^BDRBuggle:29: error: not found: value message
  } else if (message=="X"){
             ^